# tpiuo

./: README.md  docker-compose.yaml  environment.env  main.py  pyproject.toml  recv.py  sample.html  send.py
.github/workflows/: docker-image-consumer.yml  docker-image-producer.yml
consumer/: Dockerfile  consumer.Dockerfile  consumer.py  requirements.txt
producer/: Dockerfile  producer.Dockerfile  producer.py  requirements.txt
